Add and Remove Implimented

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ input {
   outline: none;
 }
 
-form {
+.form {
   width: 100%;
   display: flex;
   gap: 20px;
@@ -51,13 +51,33 @@ form {
   border: 1px solid rgb(203, 202, 202);
 }
 
-form input {
+.form input {
   width: 90%;
   padding: 12px;
 }
 
-form button {
-  width: 20%;
+button {
+  border: none;
+}
+
+.form button {
+  width: 8%;
+  background-color: transparent;
+}
+
+.form button i {
+  color: green;
+  font-size: 23px;
+}
+
+.delete {
+  font-size: 23px;
+  border: none;
+}
+
+.form button i:hover,
+.delete:hover {
+  transform: scale(0.9);
 }
 
 #tasks_lists {
@@ -74,7 +94,11 @@ form button {
   align-items: center;
 }
 
-.listsdiv input[type="text"] {
+/* .listsdiv input[type="text"] {
+  width: 100%;
+  margin: 10px;
+} */
+.listsdiv p {
   width: 100%;
   margin: 10px;
 }
@@ -82,4 +106,12 @@ form button {
 input[type="checkbox"] {
   width: 10%;
   height: 20px;
+}
+
+.line-through {
+  text-decoration: line-through;
+}
+
+.delete:hover {
+  color: brown;
 }
